Add quote section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
             <div class="info-desc">I'm running out of things to say about plants.</div>
         </div>
     </div>
+    <div class="quote">
+        <div class="quote-text">The barricades that held us down will not work anymore.
+             And when silence and shame are gone, there will be nothing to stop us. 
+             We will not stand by as our mouths are covered, bodies entered. 
+             We will speak, we will speak, we will speak.</div>
+        <div class="quote-author">- Chanel Miller, <em>Say My Name</em></div>
+    </div>
     
 
     
