Add join section to HTML

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="header-links">
             <ul>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="#">History</a></li>
                 <li><a href="#">Donate</a></li>
             </ul> 
         </div> 
@@ -21,7 +21,7 @@
         <div class="main-title">It's time to make a change</div>
         <div class="main-text">Survivors deserve more than the bare minimum. How many more stories 
             must be told before we can break this cycle?</div>
-        <button class="main-signup">Sign up</button>
+        <button class="share-button">Share your story</button>
         <div class="main-image">
             <img src="" alt="Students protesting at Boston University">
         </div>
@@ -47,10 +47,16 @@
     </div>
     <div class="quote">
         <div class="quote-text">The barricades that held us down will not work anymore.
-             And when silence and shame are gone, there will be nothing to stop us. 
-             We will not stand by as our mouths are covered, bodies entered. 
-             We will speak, we will speak, we will speak.</div>
+            And when silence and shame are gone, there will be nothing to stop us. 
+            We will not stand by as our mouths are covered, bodies entered. 
+            We will speak, we will speak, we will speak.</div>
         <div class="quote-author">- Chanel Miller, <em>Say My Name</em></div>
+    </div>
+    <div class="bottom">
+        <div class="bottom-header">We all must do our part</div>
+        <div class="bottom-text">Each and every one of us can play a role in ending the culture of sexual harassment
+            and assault.</div>
+        <button class="join-button">Join</button>
     </div>
     
 
