Add footer and finish base HTML

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             and assault.</div>
         <button class="join-button">Join</button>
     </div>
-    
-
-    
+    <div class="footer">
+        <div class="footer-text">Created by © prishaha 2023</div>
+    </div> 
 </body>
 </html>
