--- a/index.html
+++ b/index.html
@@ -19,30 +19,32 @@
         </div> 
     </div>
     <div class="main">
-        <div class="main-title">It's time to make a change</div>
-        <div class="main-text">Survivors deserve more than the bare minimum. How many more stories 
-            must be told before we can break this cycle?</div>
-        <button class="share-button">Share your story</button>
+        <div class="main-words">
+            <div class="main-title">It's time to make a change</div>
+            <div class="main-text">Survivors deserve more than the bare minimum. How many more stories 
+                must be told before we can break this cycle?</div>
+            <button class="share-button">Share your story</button>
+        </div>
         <div class="main-image">
-            <img src="" alt="Students protesting at Boston University">
+            <img src="./images/poster.jpeg" alt="Students protesting at Boston University">
         </div>
     </div>
     <div class="info">
         <div class="info-title">By Survivors, For Survivors</div>
         <div class="info-points">
-            <img src="./images/icon1.png" alt="Money">
+            <img src="./images/money.png" alt="Money">
             <div class="info-desc">Financial support to cover emergent and non-emergent costs</div>
         </div>
         <div class="info-points">
-            <img src="./images/icon2.png" alt="Voice">
+            <img src="./images/voice.png" alt="Voice">
             <div class="info-desc">Anonymous sharing of stories for institutional accountability and community support</div>
         </div>
         <div class="info-points">
-            <img src="./images/icon3.png" alt="Protest">
+            <img src="./images/protest.png" alt="Protest">
             <div class="info-desc">Organizing demonstrations to highlight systemic failures</div>
         </div>
         <div class="info-points">
-            <img src="./images/icon4.png" alt="Policy">
+            <img src="./images/policy.png" alt="Policy">
             <div class="info-desc">I'm running out of things to say about plants.</div>
         </div>
     </div>
