Add quote section

--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
             <img src="./images/poster.jpeg" alt="Students protesting at Boston University">
         </div>
     </div>
+    <div class="info-title">By Survivors, For Survivors</div>
     <div class="info">
-        <div class="info-title">By Survivors, For Survivors</div>
         <div class="info-points">
             <img src="./images/money.png" alt="Money">
-            <div class="info-desc">Financial support to cover emergent and non-emergent costs</div>
+            <div class="info-desc">Financial support to cover costs</div>
         </div>
         <div class="info-points">
             <img src="./images/voice.png" alt="Voice">
-            <div class="info-desc">Anonymous sharing of stories for institutional accountability and community support</div>
+            <div class="info-desc">Anonymous sharing of stories</div>
         </div>
         <div class="info-points">
             <img src="./images/protest.png" alt="Protest">
-            <div class="info-desc">Organizing demonstrations to highlight systemic failures</div>
+            <div class="info-desc">Organizing demonstrations</div>
         </div>
         <div class="info-points">
             <img src="./images/policy.png" alt="Policy">
-            <div class="info-desc">I'm running out of things to say about plants.</div>
+            <div class="info-desc">Creating equitable policies</div>
         </div>
     </div>
     <div class="quote">
@@ -53,8 +53,9 @@
             And when silence and shame are gone, there will be nothing to stop us. 
             We will not stand by as our mouths are covered, bodies entered. 
             We will speak, we will speak, we will speak.</div>
+            <br>
         <div class="quote-author">- Chanel Miller, <em>Say My Name</em></div>
-    </div>
+    </div> </br>
     <div class="bottom">
         <div class="bottom-header">We all must do our part</div>
         <div class="bottom-text">Each and every one of us can play a role in ending the culture of sexual harassment
