Add footer section and fix info

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <img src="./images/poster.jpeg" alt="Students protesting at Boston University">
         </div>
     </div>
+    <div class="info-section">
     <div class="info-title">By Survivors, For Survivors</div>
     <div class="info">
         <div class="info-points">
@@ -46,7 +47,7 @@
         <div class="info-points">
             <img src="./images/policy.png" alt="Policy">
             <div class="info-desc">Creating equitable policies</div>
-        </div>
+        </div> </div>
     </div>
     <div class="quote">
         <div class="quote-text">The barricades that held us down will not work anymore.
@@ -57,10 +58,12 @@
         <div class="quote-author">- Chanel Miller, <em>Say My Name</em></div>
     </div> </br>
     <div class="bottom">
-        <div class="bottom-header">We all must do our part</div>
-        <div class="bottom-text">Each and every one of us can play a role in ending the culture of sexual harassment
-            and assault.</div>
-        <button class="join-button">Join</button>
+            <div class="bottom-section">
+                <div class="bottom-text"><b>We all must do our part</b> <br>
+                Each and every one of us can play a role in ending the culture of sexual harassment
+                    and assault. </div></br> 
+                <button class="join-button">Join</button>
+            </div>
     </div>
     <div class="footer">
         <div class="footer-text">Created by © prishaha 2023</div>
